k8s/services/uptime-kuma/base/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma-ns
  labels:
    app: uptime-kuma
    categ: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
        categ: tools
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: 256Mi
              cpu:  600m
            requests:
              memory: 64Mi
              cpu: 200m
          volumeMounts:
            - name: nfs-pvc
              mountPath: /app/data
      volumes:
      - name: nfs-pvc
        persistentVolumeClaim:
          claimName: uptime-kuma-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-svc
  namespace: uptime-kuma-ns
  labels:
    app: uptime-kuma
    categ: tools
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ing
  namespace: uptime-kuma-ns
spec:
  ingressClassName: nginx
  rules:
  - host: uptime-kuma.psilva.org
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma-svc
            port:
              number: 3001
        path: /
        pathType: Prefix
